# wdtk_authorities_list

./: Dockerfile  Dockerfile.dev  docker-compose.yml  pyproject.toml  readme.md
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  publish_only.yml  test.yml
data/raw/: authorities_categories.csv  id_to_name.csv
docs/: _config.yml  index.md
docs/_datasets/whatdotheyknow_authorities_dataset/: 0.73.0.md  0.73.md  0.md  latest.md
docs/_downloads/whatdotheyknow-authorities-dataset-authorities-categories/: 0.73.0.md  0.73.md  0.md  latest.md
docs/_downloads/whatdotheyknow-authorities-dataset-authorities-categories-csv/: 0.73.0.md  0.73.md  0.md  latest.md
docs/_downloads/whatdotheyknow-authorities-dataset-authorities-categories-parquet/: 0.73.0.md  0.73.md  0.md  latest.md
docs/_downloads/whatdotheyknow-authorities-dataset-authorities-csv/: 0.73.0.md  0.73.md  0.md  latest.md
docs/_downloads/whatdotheyknow-authorities-dataset-authorities-id-lookup/: 0.73.0.md  0.73.md  0.md  latest.md
docs/_downloads/whatdotheyknow-authorities-dataset-authorities-id-lookup-csv/: 0.73.0.md  0.73.md  0.md  latest.md
docs/_downloads/whatdotheyknow-authorities-dataset-authorities-id-lookup-parquet/: 0.73.0.md  0.73.md  0.md  latest.md
docs/_downloads/whatdotheyknow-authorities-dataset-authorities-parquet/: 0.73.0.md  0.73.md  0.md  latest.md
docs/_versionlists/: whatdotheyknow_authorities_dataset.md
src/wdtk_authorities_list/: __main__.py  build.py
tests/: test_whatdotheyknow_authorities_dataset.py
(+36 files in other folders)
